tests/dataset/tpc-ds/compiler/c/q98.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:49Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:49Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static double _sum_float(list_float v) {
  double sum = 0;
  for (int i = 0; i < v.len; i++)
    sum += v.data[i];
  return sum;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  int key;
  list_int items;
} _GroupInt;
typedef struct {
  int len;
  int cap;
  _GroupInt *data;
} list_group_int;
static list_group_int _group_by_int(list_int src) {
  list_group_int res;
  res.len = 0;
  res.cap = 0;
  res.data = NULL;
  for (int i = 0; i < src.len; i++) {
    int key = src.data[i];
    int idx = -1;
    for (int j = 0; j < res.len; j++)
      if (res.data[j].key == key) {
        idx = j;
        break;
      }
    if (idx == -1) {
      if (res.len >= res.cap) {
        res.cap = res.cap ? res.cap * 2 : 4;
        res.data = (_GroupInt *)realloc(res.data, sizeof(_GroupInt) * res.cap);
      }
      res.data[res.len].key = key;
      res.data[res.len].items = list_int_create(0);
      idx = res.len++;
    }
    _GroupInt *g = &res.data[idx];
    g->items.data =
        (int *)realloc(g->items.data, sizeof(int) * (g->items.len + 1));
    g->items.data[g->items.len++] = src.data[i];
  }
  return res;
}
typedef struct StoreSale StoreSale;
typedef struct Item Item;
typedef struct DateDim DateDim;

typedef struct {
  const char *i_item_id;
  const char *i_item_desc;
  const char *i_category;
  const char *i_class;
  double i_current_price;
  double itemrevenue;
  double revenueratio;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *i_item_id;
  const char *i_item_desc;
  const char *i_category;
  const char *i_class;
  double i_current_price;
  double itemrevenue;
  double revenueratio;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ss_item_sk;
  int ss_sold_date_sk;
  double ss_ext_sales_price;
} store_sale_t;

typedef struct {
  int i_item_sk;
  const char *i_item_id;
  const char *i_item_desc;
  const char *i_category;
  const char *i_class;
  double i_current_price;
} item_t;

typedef struct {
  int d_date_sk;
  const char *d_date;
} date_dim_t;

typedef struct {
  int i_item_id;
  int i_item_desc;
  int i_category;
  int i_class;
  int i_current_price;
  double itemrevenue;
} grouped_item_t;
typedef struct {
  int len;
  grouped_item_t *data;
} grouped_item_list_t;
grouped_item_list_t create_grouped_item_list(int len) {
  grouped_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(grouped_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int class;
  double total;
} totals_item_t;
typedef struct {
  int len;
  totals_item_t *data;
} totals_item_list_t;
totals_item_list_t create_totals_item_list(int len) {
  totals_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(totals_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int i_item_id;
  int i_item_desc;
  int i_category;
  int i_class;
  int i_current_price;
  double itemrevenue;
  double revenueratio;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct StoreSale {
  int ss_item_sk;
  int ss_sold_date_sk;
  double ss_ext_sales_price;
} StoreSale;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct Item {
  int i_item_sk;
  char *i_item_id;
  char *i_item_desc;
  char *i_category;
  char *i_class;
  double i_current_price;
} Item;
typedef struct {
  int len;
  item_t *data;
} item_list_t;
item_list_t create_item_list(int len) {
  item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct DateDim {
  int d_date_sk;
  char *d_date;
} DateDim;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q98_revenue_result;
static void test_TPCDS_Q98_revenue() {
  tmp1_t tmp1[] = {(tmp1_t){.i_item_id = "I1",
                            .i_item_desc = "desc1",
                            .i_category = "CatA",
                            .i_class = "Class1",
                            .i_current_price = 100.0,
                            .itemrevenue = 50.0,
                            .revenueratio = 33.333333333333336},
                   (tmp_item_t){.i_item_id = "I2",
                                .i_item_desc = "desc2",
                                .i_category = "CatB",
                                .i_class = "Class1",
                                .i_current_price = 200.0,
                                .itemrevenue = 100.0,
                                .revenueratio = 66.66666666666667}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q98_revenue_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q98_revenue_result.len; i3++) {
      if (test_TPCDS_Q98_revenue_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  store_sale_t store_sales[] = {
      (store_sale_t){
          .ss_item_sk = 1, .ss_sold_date_sk = 1, .ss_ext_sales_price = 50.0},
      (store_sale_t){
          .ss_item_sk = 2, .ss_sold_date_sk = 1, .ss_ext_sales_price = 100.0}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  item_t item[] = {(item_t){.i_item_sk = 1,
                            .i_item_id = "I1",
                            .i_item_desc = "desc1",
                            .i_category = "CatA",
                            .i_class = "Class1",
                            .i_current_price = 100.0},
                   (item_t){.i_item_sk = 2,
                            .i_item_id = "I2",
                            .i_item_desc = "desc2",
                            .i_category = "CatB",
                            .i_class = "Class1",
                            .i_current_price = 200.0}};
  int item_len = sizeof(item) / sizeof(item[0]);
  date_dim_t date_dim[] = {
      (date_dim_t){.d_date_sk = 1, .d_date = "2000-02-01"}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  grouped_item_list_t grouped = (grouped_item_list_t){0, NULL};
  grouped_item_list_t tmp4 = create_grouped_item_list(grouped.len);
  int tmp5_data[grouped.len];
  list_int tmp5 = {0, tmp5_data};
  int tmp6 = 0;
  for (int i7 = 0; i7 < grouped.len; i7++) {
    grouped_item_t g = grouped.data[i7];
    tmp4.data[tmp6] = g;
    tmp5.data[tmp6] = g.i_class;
    tmp6++;
  }
  tmp4.len = tmp6;
  tmp5.len = tmp6;
  list_group_int tmp8 = _group_by_int(tmp5);
  totals_item_list_t tmp9 = totals_item_list_t_create(tmp8.len);
  int tmp10 = 0;
  for (int gi = 0; gi < tmp8.len; gi++) {
    _GroupInt _gp = tmp8.data[gi];
    grouped_item_list_t tmp11 = grouped_item_list_t_create(_gp.items.len);
    for (int i12 = 0; i12 < _gp.items.len; i12++) {
      tmp11.data[i12] = tmp4.data[_gp.items.data[i12]];
    }
    tmp11.len = _gp.items.len;
    struct {
      int key;
      grouped_item_list_t items;
    } cg = {_gp.key, tmp11};
    list_float tmp13 = list_float_create(cg.items.len);
    int tmp14 = 0;
    for (int i15 = 0; i15 < cg.items.len; i15++) {
      grouped_item_t x = cg.items.data[i15];
      tmp13.data[tmp14] = x.itemrevenue;
      tmp14++;
    }
    tmp13.len = tmp14;
    tmp9.data[tmp10] =
        (totals_item_t){.class = cg.key, .total = _sum_float(tmp13)};
    tmp10++;
  }
  tmp9.len = tmp10;
  totals_item_list_t totals = tmp9;
  result_item_list_t tmp16 =
      result_item_list_t_create(grouped.len * totals.len);
  int tmp17 = 0;
  for (int tmp18 = 0; tmp18 < grouped.len; tmp18++) {
    grouped_item_t g = grouped.data[tmp18];
    for (int tmp19 = 0; tmp19 < totals.len; tmp19++) {
      totals_item_t t = totals.data[tmp19];
      if (!(g.i_class == t.class)) {
        continue;
      }
      tmp16.data[tmp17] =
          (result_item_t){.i_item_id = g.i_item_id,
                          .i_item_desc = g.i_item_desc,
                          .i_category = g.i_category,
                          .i_class = g.i_class,
                          .i_current_price = g.i_current_price,
                          .itemrevenue = g.itemrevenue,
                          .revenueratio = g.itemrevenue * 100 / t.total};
      tmp17++;
    }
  }
  tmp16.len = tmp17;
  result_item_list_t result = tmp16;
  printf("[");
  for (int i20 = 0; i20 < result.len; i20++) {
    if (i20 > 0)
      printf(",");
    result_item_t it = result.data[i20];
    printf("{");
    _json_string("i_item_id");
    printf(":");
    _json_int(it.i_item_id);
    printf(",");
    _json_string("i_item_desc");
    printf(":");
    _json_int(it.i_item_desc);
    printf(",");
    _json_string("i_category");
    printf(":");
    _json_int(it.i_category);
    printf(",");
    _json_string("i_class");
    printf(":");
    _json_int(it.i_class);
    printf(",");
    _json_string("i_current_price");
    printf(":");
    _json_int(it.i_current_price);
    printf(",");
    _json_string("itemrevenue");
    printf(":");
    _json_float(it.itemrevenue);
    printf(",");
    _json_string("revenueratio");
    printf(":");
    _json_float(it.revenueratio);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q98_revenue_result = result;
  test_TPCDS_Q98_revenue();
  return 0;
}
